# adobe-controller

./: .gitignore  .gitmodules  AGENT_INSTRUCTIONS_ENV_FIXES.md  AGENT_INSTRUCTIONS_PREMIERE.md  AGENT_INSTRUCTIONS_UXP_RESEARCH.md  CLAUDE.md  GEMINI.md  MULTI_AGENT_PLAN.md  TODO.md  launch-agents.sh  mcp.json
.claude/: project-analysis.md  project-context.json
.github/: copilot-instructions.md
.github/workflows/: rust-ci.yml
adobe-mcp-rs/: Cargo.toml  build.ps1
adobe-mcp-rs/.cargo/: config.toml
adobe-mcp-rs/acrobat-bridge/: Cargo.toml
adobe-mcp-rs/acrobat-bridge/src/: client.rs  commands.rs  error.rs  ffi.rs  js_bridge.rs  lib.rs
adobe-mcp-rs/acrobat-mcp/: Cargo.toml  IMPLEMENTATION.md  README.md  mcp-config.example.json
adobe-mcp-rs/acrobat-mcp/src/: client.rs  main.rs  tools.rs
adobe-mcp-rs/acrobat-mcp/src/mcp/: mod.rs  protocol.rs
adobe-mcp-rs/adobe-common/: Cargo.toml
adobe-mcp-rs/adobe-common/src/: error.rs  lib.rs  protocol.rs  socket_io.rs  types.rs
adobe-mcp-rs/adobe-common/tests/: integration.rs
adobe-mcp-rs/adobe-proxy/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  PROTOCOL_TEST.md  README.md
adobe-mcp-rs/adobe-proxy/src/: main.rs
adobe-mcp-rs/photoshop-mcp/: Cargo.toml
adobe-mcp-rs/photoshop-mcp/src/: client.rs  main.rs  tools.rs
adobe-mcp-rs/scripts/: install-acrobat-bridge.ps1  run-rust-tests.ps1  run-uxp-e2e.ps1  validate-acrobat.ps1
adobe-mcp-rs/tests/: mcp_protocol.rs  proxy_socketio.rs
scripts/: fetch-external-references.ps1  setup-adobe-agents.sh
