[workspace]
resolver = "2"
members = [
    "adobe-common",
    "adobe-proxy",
    "acrobat-mcp",
    "acrobat-bridge",
    "photoshop-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["David T. Martel <davidmartel07@gmail.com>"]
repository = "https://github.com/david-t-martel/adobe-mcp"

[workspace.dependencies]
# Async Runtime - using versions from sccache
tokio = { version = "1.0", features = ["full", "sync", "macros", "rt-multi-thread"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Utilities
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"

# MCP Protocol (we'll implement our own based on JSON-RPC)
jsonrpc-core = "18.0"

# FFI for native plugin
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
