[package]
name = "adobe-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and protocols for Adobe MCP servers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
