[package]
name = "photoshop-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for Adobe Photoshop automation"

[dependencies]
adobe-common = { path = "../adobe-common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
